# WHUSP

./: .gitignore  Makefile  README.md  README.zh.md  WHUSP 初赛汇报.pptx
.github/scripts/: ci-test-input.sh
.github/workflows/: ci-pr.yml  ci-riscv-smoke.yml  contest-gap.yml  docs-pages.yml
develop-guide/: pthread-signal-futex-stage-plan-2026-05-03.md
docs/: CHANGELOG.md  contest-development-plan.md
img/: decompress.sh
os/: Cargo.toml  Makefile
os/.cargo/: config.toml
os/assets/loongarch64/: liboscomp-musl-compat.c
os/assets/riscv64/: libwhusp-rv-musl-splice07-syscall.c
os/dotcargo/: config.toml
os/src/: config.rs  console.rs  cpu.rs  drivers.rs  fs.rs  lang_items.rs  linker-loongarch64.ld  main.rs  mm.rs  net.rs  perf.rs  shutdown.rs  sync.rs  syscall.rs  task.rs  timer.rs  trap.rs  vdso.rs
os/src/arch/: mod.rs
os/src/arch/loongarch64/: backtrace.rs  board.rs  context_switch.rs  entry.asm  hart.rs  idle.S  interrupt.rs  irq.rs  mm.rs  mod.rs  sbi.rs  signal.rs  smp.rs  switch.S  task_context.rs  timer.rs  trap.rs
os/src/arch/loongarch64/trap/: context.rs  mod.rs  trap.S
os/src/arch/riscv64/: board.rs  entry.asm  hart.rs  mm.rs  mod.rs  sbi.rs  signal.rs  smp.rs  task_context.rs  timer.rs  trap.rs
os/src/arch/riscv64/trap/: context.rs  mod.rs  trap.S
os/src/boards/: qemu.rs
os/src/drivers/: block.rs  block_cache.rs  chardev.rs  input.rs  net.rs  plic.rs  virtio.rs
os/src/drivers/block/: mod.rs  virtio_blk.rs
os/src/drivers/chardev/: mod.rs  ns16550a.rs
os/src/drivers/gpu/: mod.rs
os/src/drivers/input/: mod.rs
os/src/drivers/net/: mod.rs
os/src/fs/: anonfd.rs  cgroupfs.rs  console_tty.rs  dentry_cache.rs  devfs.rs  dirent.rs  eventfd.rs  ext4.rs  fat.rs  inode.rs  memfd.rs  mod.rs  mount.rs  mount_fd.rs  named_fifo.rs  overlayfs.rs  path.rs  pipe.rs  procfs.rs  socket.rs  staticfs.rs  status_flags.rs  stdio.rs  timerfd.rs  tmpfs.rs
os/src/fs/vfs/: backend.rs  error.rs  file.rs  mod.rs  node.rs  path.rs
os/src/mm/: address.rs  address_space.rs  area.rs  elf_loader.rs  frame_allocator.rs  heap_allocator.rs  kernel_space.rs  memory_set.rs  mod.rs  page_cache.rs  page_table.rs  shm.rs  user_space.rs
os/src/sync/: condvar.rs  irq.rs  mod.rs  sleep_mutex.rs  spin.rs  up.rs
os/src/syscall/: aio.rs  context.rs  errno.rs  fs.rs  keyring.rs  kmodule.rs  memory.rs  mod.rs  msg.rs  net.rs  process.rs  sem.rs  signal.rs  sync.rs  time.rs  user_ptr.rs  wait.rs
os/src/syscall/fs/: epoll.rs  eventfd.rs  fanotify.rs  fd.rs  fd_compat.rs  fd_lock.rs  file_handle.rs  inotify.rs  io.rs  mod.rs  mount.rs  path.rs  permissions.rs  poll.rs  quota.rs  stat.rs  swap.rs  tty.rs  uapi.rs  user_ptr.rs
os/src/syscall/process/: clone.rs  compare.rs  exec.rs  id.rs  identity.rs  mod.rs  namespace.rs  pidfd.rs  ptrace.rs  resource.rs  sched.rs  system.rs
os/src/task/: clone.rs  contest_runner.rs  exec.rs  fd.rs  futex.rs  id.rs  initproc.rs  ltp_whitelist.rs  ltp_whitelist.txt  manager.rs  mod.rs  process.rs  process_lifecycle.rs  processor.rs  ptrace.rs  signal.rs  smp_probe.rs  task.rs
os/src/trap/: mod.rs
scripts/: build_contest_disk.sh  export_contest_case_scripts.py  export_preliminary_contest_case_scripts.py
scripts/smp-gates/: phase-0-boot-config.sh  phase-1-boot-ipi.sh  phase-2-lock-irq.sh  phase-3-cpu-sentinel.sh  phase-3-sched-life.sh  phase-4-wait-console.sh  phase-4-wait-exit.sh  phase-4-wait-fd.sh  phase-4-wait-futex.sh  phase-4-wait-io.sh  phase-4-wait-msg.sh  phase-4-wait-pipe.sh  phase-4-wait-pty.sh  phase-4-wait-sem.sh  phase-4-wait-socket.sh  phase-4-wait-tcp.sh  phase-4-wait-timer.sh
testsuits/ltp-full-20240524/runtest/: README.md  dio  hyperthreading  ipc  net_stress.ipsec_icmp  nptl  pty
user/: Cargo.toml  Makefile
user/src/: file.rs  lib.rs  syscall.rs  task.rs
